# oasis-cbor

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain
.github/: CODEOWNERS
.github/workflows/: ci-audit.yml  ci-difffuzz.yaml  ci-lint.yml  ci-test.yaml
derive/: Cargo.toml
derive/src/: common.rs  decode.rs  encode.rs  lib.rs  util.rs
difffuzz/: Cargo.toml  difffuzz.go  difffuzz.h  difffuzz_test.go  go.mod  go.sum
difffuzz/src/: lib.rs
src/: decode.rs  encode.rs  lib.rs  macros.rs
src/serde/: de.rs  error.rs  mod.rs  ser.rs  test.rs
tests/: derive_test.rs
value/: Cargo.toml
value/fuzz/: Cargo.toml
value/fuzz/fuzz_targets/: fuzz_target_cbor.rs
value/src/: lib.rs  macros.rs  reader.rs  values.rs  writer.rs
