[package]
name = "oasis-cbor"
description = "Rust CBOR serialization built as a thin wrapper around sk-cbor."
version = "0.3.1"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
repository = "https://github.com/oasisprotocol/oasis-cbor"
readme = "README.md"
edition = "2018"
license = "Apache-2.0"
keywords = ["cbor", "serialization"]
categories = ["encoding"]

[dependencies]
oasis-cbor-value = { path = "value", version = "0.3.1" }
oasis-cbor-derive = { path = "derive", version = "0.3.1" }

# Third party.
impl-trait-for-tuples = "0.2.1"
thiserror = "1.0.25"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11" }

[features]
default = []
serde = ["dep:serde"]  # Support for (de)serializing data types that implement serde::{Serialize,Deserialize}
