[package]
name = "oasis-cbor-derive"
description = "Procedural macros for oasis-cbor."
version = "0.3.1"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oasisprotocol/oasis-cbor"
keywords = ["cbor", "serialization"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
oasis-cbor-value = { path = "../value", version = "0.3.1" }

darling = "0.14.1"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.73"
proc-macro-crate = "1.0.0"
